wwwroot/css/main.css
body,
html {
  margin: 0;
  padding: 0;
  height: 100vh;
  font-family: ArtifaktElement;
}

thead {
  border-bottom: black;
}

th {
  font-size: 14px;
  font-weight: bold;
}

td {
  font-size: 14px;
}

tbody>tr:last-child {
  border-bottom: 1px black solid;
}

tbody>tr:nth-child(odd) {
  background-color: #fafafa;
}

.table>:not(caption)>*>* {
  background-color: inherit;
}

.hidden {
  display: none !important;
}

.big-padding {
  padding: 30px;
}

.dimmed {
  color: lightgrey;
}

.name-column {
  width: 50%;
}

.button-column {
  width: 50px;
}

.full-height {
  height: 100%;
}

.float-right {
  float: right;
}

.link-icon {
  padding-left: 5px;
}

.view {
  width: 100%;
  height: calc(100vh - 89px);
}

.row {
  width: 100%;
}

.pr-0 {
  padding-right: 0;
}

.pl-ml-0 {
  padding-left: 0;
  margin-left: 0;
}

.display-block {
  display: block;
}

.grey-border-right {
  border-right: lightgrey solid 1px;
}

.center {
  text-align: center;
  position: relative;
  top: 20%;
}

.clickable {
  cursor: pointer;
}

.modal-body {
  max-height: 80vh;
  overflow: scroll;
}

/*
#header,
#hubstree,
#preview {
  position: absolute;
}
*/

#header {
  height: 3em;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
}

#hubstree {
  /*width: 40%;*/
  left: 0;
  top: 0;
  bottom: 0;
  overflow-y: scroll;
  position: relative;
}

#hubstree a {
  color: black;
  text-decoration: none;
}

#preview {
  /*width: 60%;*/
  right: 0;
  top: 3em;
  bottom: 0;
  box-sizing: border-box;
}

#info {
  height: 20%;
  padding: 5px;
}

#thumbnail {
  height: 100%;
}

#avatarImage { 
  background-color: #fff;
}

#title {
  height: 100%;
  vertical-align: middle;
  display: inline-block;
}

#occurrences,
#collections {
  height: 30%;
  width: 50%;
  overflow: auto;
  border-color: lightgrey;
  border-style: solid;
  border-left: 0px;
  float: left;
  box-sizing: border-box;
}

#properties,
#definitions {
  height: 30%;
  width: 50%;
  overflow: auto;
  border-color: lightgrey;
  border-style: solid;
  border-left: 0px;
  border-right: 0px;
  box-sizing: border-box;
}

#loadingSign {
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 1055; /* same as --bs-modal-zindex */
}

#controls {
  padding: 5px;
}

#header > * {
  height: 2em;
  margin: 0 0.5em;
}

#header .title {
  height: auto;
  margin-right: auto;
}

#tree {
  margin: 0.5em;
}

#versionList {
  width: fit-content;
  display: inline-block;
  border: none;
}

@media (max-width: 768px) {
  #hubstree {
    width: 100%;
    top: 3em;
    bottom: 75%;
  }
  #preview {
    width: 100%;
    top: 25%;
    bottom: 0;
  }
}

/* Inspire Tree */

.inspire-tree .icon-expand:before {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22currentColor%22%20class%3D%22bi%20bi-chevron-right%22%20viewBox%3D%220%200%2016%2016%22%3E%0A%20%20%3Cpath%20fill-rule%3D%22evenodd%22%20d%3D%22M4.646%201.646a.5.5%200%200%201%20.708%200l6%206a.5.5%200%200%201%200%20.708l-6%206a.5.5%200%200%201-.708-.708L10.293%208%204.646%202.354a.5.5%200%200%201%200-.708z%22%2F%3E%0A%3C%2Fsvg%3E);
  background-color: #fff;
  border-radius: 3px;
  margin-left: -1px;
}

.inspire-tree .icon-collapse:before {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22currentColor%22%20class%3D%22bi%20bi-chevron-down%22%20viewBox%3D%220%200%2016%2016%22%3E%0A%20%20%3Cpath%20fill-rule%3D%22evenodd%22%20d%3D%22M1.646%204.646a.5.5%200%200%201%20.708%200L8%2010.293l5.646-5.647a.5.5%200%200%201%20.708.708l-6%206a.5.5%200%200%201-.708%200l-6-6a.5.5%200%200%201%200-.708z%22%2F%3E%0A%3C%2Fsvg%3E);
  background-color: #fff;
  border-radius: 3px;
  margin-left: -1px;
}

.inspire-tree li {
  background-image: none !important;
  padding: 3px;
}

.inspire-tree ol {
  background-image: none !important;
}

.inspire-tree .title-wrap {
  background-image: none !important;
}

/* Bootstrap Overrides */

.form-label {
  font-size: x-small;
}

.form-text {
  font-size: small;
}

.nav-link {
  border: none !important;
  --bs-nav-link-color: darkgrey;
}

.nav-link.active {
  border-bottom: black solid 2px !important;
}

.dropdown-toggle::after {
  color: white;
}

